# dagster-ml-example

./: .dockerignore  .gitignore  devspace.yaml  hive-metastore.Dockerfile  pom.xml  python.Dockerfile  trino.Dockerfile
charts/mlflow/: Chart.yaml  values.yaml
charts/nessie/: Chart.yaml  values.yaml
charts/nessie/charts/: nessie-helm-0.92.1.tgz
charts/nessie/templates/: configmap.yaml  secret.yaml
devspace/hdfs/: devspace.yaml
hive-metastore/: Dockerfile
hive-metastore/hdfs/: hive-site.xml
hive-metastore/s3/: hive-site.xml
python-hdfs/: .bashrc  .dockerignore  Dockerfile  core-site.xml  daft.ipynb  dagster.yaml  devspace.yaml  iceberg.ipynb  main.py  mlflow.ipynb  pom.xml  pyproject.toml  ray.ipynb  sudoku.ipynb
python-hdfs/mnist/: assets.py  code_location.py  jobs.py  resources.py  utils.py
s3/: core-site.xml  hive-site.xml
