[tool.poetry]
name = "python-iceberg"
version = "0.1.0"
description = "Iceberg development dependencies"
authors = ["Francisco Garcia Florez <francisco@truevoid.dev>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fsspec = { version = ">=2023" }
ipython = "~8"
pyiceberg = { extras = ["s3fs", "pandas", "daft"], version = ">=0.6" }
ray = { extras = ["all"], version = "~2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["chunked_upload"]
exclude = ["build"]
