[tool.poetry]
name = "python-iceberg"
version = "0.1.0"
description = "Iceberg development dependencies"
authors = ["Francisco Garcia Florez <francisco@truevoid.dev>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fsspec = { version = ">=2023" }
numpy = "<2"
ipython = "~8"
pyiceberg = { extras = ["s3fs", "pandas", "daft"], version = ">=0.6" }
ray = { extras = ["all"], version = "~2" }
torch = { version = "^2.3.1+cpu", source = "pytorch_cpu" }
torchvision = { version = "^0.18.1+cpu", source = "pytorch_cpu" }
tqdm = "~4"
setuptools = "~71"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["chunked_upload"]
exclude = ["build"]
